--- a/payment.html
+++ b/payment.html
@@ -68,7 +68,7 @@
 
                 <div class="footerContent">
                     We place a great deal of importance on keeping your payments safe and secure. Thats why your
-                    Direct Debit payments are protected by the <a>Direct Debit Guarantee (Terms and Conditions).</a>
+                    Direct Debit payments are protected by the <a href="">Direct Debit Guarantee (Terms and Conditions).</a>
                     <br><br>
                     Your Airtime Plan and add-ons will be taken by Service User ID 439374 and your Device Plan will
                     be taken by Service User ID 450865
